--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ body{
 .hero{
     grid-area: hero;
     min-height: 300px;
-    background-image: url(img/hero.JPG);
+    background-image: url(img/hero.jpg);
     background-size: cover;
     background-position: center;
     padding: 50px;
